# ssamAI

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE-pipeline.md  ARCHITECTURE.md  CLAUDE.md  Project_ssamAI_PRD_v1.1.docx  README.md  conftest.py  docker-compose.yml  package-lock.json  package.json  pytest.ini  ssamAI_wireframe_v2.jsx  ssamAI_연구과제_기획서_v1.0.docx
.harness/: agent.md
.harness/docs/: pitfalls.md  team-roster.md
.harness/reins/backend-expert/: agent.md
.harness/reins/code-reviewer/: agent.md
.omo/run-continuation/: ses_107db488fffewLzG2mNuxw3Fbl.json  ses_108664c62ffe53PULJOF4IxufW.json  ses_1088a8bffffefyj7eWQ84h2WiV.json  ses_11336b6d7ffe3N0DGQb1XuRZG3.json
apps/librechat/: README.md  librechat.yaml
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  (+2 more)
docs/: MISSION-REFLECTION.md  PHASE2-library-page-spec.md  PHASE2-open-checklist.md  PHASE2-remaining-work.md  PHASE3-BC-COMPLETION.md  PHASE3-COMPLETION.md  PHASE3-LOOP3-COMPLETION.md  STACK.md  TEACHER_LETTER.md  TEST-INFRA-COMPLETION.md  UAT-REPORT.md  UAT-SCENARIOS.md  ssamAI_OVERVIEW.md
samples/: create-hwpx-v2.mjs  create-hwpx.js  create-hwpx.mjs  test-all-skills.mjs
samples/output/: 01-수업과정안_광합성.hwpx  02-형성평가_광합성.hwpx  03-루브릭_건의문.hwpx  04-행정공문_연수보고서.hwpx  05-가정통신문_현장학습.hwpx
samples/slides/: compile.js  slide-01.js  slide-02.js  slide-03.js  slide-04.js  slide-05.js  slide-06.js  slide-07.js  slide-08.js  slide-09.js  slide-10.js  slide-11.js  slide-12.js  slide-13.js  slide-14.js  slide-15-mari_backup.js  slide-15.js  slide-16.js
scripts/: test-python.sh
services/litellm/: config.yaml
services/persona-service/: Dockerfile  pyproject.toml
services/persona-service/app/: __init__.py  config.py  main.py  models.py  repository.py
services/persona-service/tests/: test_models.py
services/ppt-service/: Dockerfile  pyproject.toml
services/ppt-service/app/: __init__.py  config.py  llm_client.py  main.py  models.py  pptx_service.py
services/ppt-service/tests/: test_models.py
services/skill-service/: Dockerfile  pyproject.toml
services/skill-service/app/: config.py  document_parser.py  main.py  models.py  repository.py  skill_registry.py
services/skill-service/app/skills/: __init__.py  admin_doc.py  assessment.py  lesson_plan.py  parent_letter.py
services/skill-service/tests/: test_formative_assessment.py  test_home_letter.py  test_lesson_plan.py  test_official_letter.py  test_rubric.py
(+64 files in other folders)
