[project]
name = "ssamai-skill-service"
version = "0.1.0"
description = "Project ssamAI — 교사 문서 생성 스킬 서비스 (Neo4j + LiteLLM)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "httpx>=0.27.2",
  "neo4j>=5.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.3",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
